Object tree build refactorings
 - Added file and child objects properties to SpinObject class
 - Removed ObjectTree class